--- a/_templates/index.jade
+++ b/_templates/index.jade
@@ -9,8 +9,20 @@ html(lang="en")
       href="#{assetDirectory}/css/style.css"
     )
   body
-    h1 Hello #{name}
-    script(
+    .container
+      .btn.grid-width-1.grid-height-1 One
+      .btn.grid-width-1.grid-height-1 Two
+      .btn.grid-width-1.grid-height-1 Three
+      .btn.grid-width-1.grid-height-1 Four
+      .btn.grid-width-1.grid-height-1 Five
+      .btn.grid-width-1.grid-height-1 Six
+      .btn.grid-width-1.grid-height-1 Seven
+      .btn.grid-width-1.grid-height-1 Eight
+      .btn.grid-width-1.grid-height-1 Nine
+      .btn.grid-width-1.grid-height-1 Ten
+      .btn.grid-width-1.grid-height-1 Eleven
+      .btn.grid-width-1.grid-height-1 Twelve
+  script(
       type='text/javascript'
       src='#{assetDirectory}/js/sequencer.js'
     )
